2010-04-22  Sergio Martin <sergio.martin@artica.es>

       * operation/incidents/incident.php: Changed the
        All group on combos from 1 to 0

2010-04-22  Sergio Martin <sergio.martin@artica.es>

       * include/functions_ui.php
       include/functions_agents.php
       include/functions_db.php: Change the way of validate
	the All group. Now the group All has id_group = 0
	and is not on the database

       * extensions/module_groups.php: Remove the All 
	group row from the table. Inprove the table style 
	
       * operation/agentes/status_monitor.php
       operation/agentes/alerts_status.php
       operation/agentes/estado_agente.php
       operation/agentes/exportdata.php
       operation/agentes/networkmap.php
       godmode/agentes/modificar_agente.php
       godmode/agentes/planned_downtime.php: Changed the
	All group on combos from 1 to 0

2010-04-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Added validation
	when remove a group. Now, if the group is not empty
	shows a message and dont allow to remove it

2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: erased trace line in the source of function
	"agent_changed", and force to select by default the none option.

2010-04-22 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: changed function "agent_changed" for take
	the translate any or none texts from ajax or global var.
	
	* operation/agentes/ver_agente.php: added to package data the translate
	text for any.

2010-04-21  Sancho Lerena <slerena@artica.es>

    * include/functions_reporting.php: Added function render_report_html_item()
    to render a given report element in HTML format. Fixed a small problem in
    SUM report type (int truncate invalidate most of SUM reports when not using
    a _inc data type).

    * include/functions.php: Updated all "is_module_xxx" from using ereg 
    (deprecated) to use preg_match.
